terraform/route_tables.tf
resource "aws_route_table" "public" {
  vpc_id = aws_vpc.opshub.id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.opshub.id
  }

  tags = {
    Name = "${local.name_prefix}-public-rt"
  }
}

resource "aws_route_table_association" "public" {
  count = var.availability_zone_count

  subnet_id = aws_subnet.public[count.index].id

  route_table_id = aws_route_table.public.id
}

resource "aws_route_table" "private" {
  vpc_id = aws_vpc.opshub.id

  route {
    cidr_block     = "0.0.0.0/0"
    nat_gateway_id = aws_nat_gateway.opshub.id
  }

  tags = {
    Name = "${local.name_prefix}-private-rt"
  }
}

resource "aws_route_table_association" "private" {
  count = var.availability_zone_count

  subnet_id = aws_subnet.private[count.index].id

  route_table_id = aws_route_table.private.id
}
